<resources>
    <string name="app_name">Ranobe</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_library">Library</string>
    <string name="nav_settings">Settings</string>
    <string name="image">image</string>
    <string name="read_info">Read</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="automatic">Auto</string>
    <string name="theme_mode_sub_text">change the look and feel as per your preferences</string>
    <string name="select_default_theme">Select default theme</string>
    <string name="ui">UI</string>
    <string name="start_typing">Start typing…</string>
    <string name="set_the_font_size">Font Size</string>
    <string name="set_the_theme">Page Theme</string>
    <string name="aa">Aa</string>
    <string name="customize_info">Customize</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sources">Sources</string>
    <string name="continue_reading_info">Continue Reading</string>
    <string name="no_results_err">we didn\'t find anything for you!</string>
    <string name="retry">Retry</string>
    <string name="info">INFO</string>
    <string name="mp_lite_subtitle">An open source music player from the same developer</string>
    <string name="ranobem_subtitle">Manga reader for Android</string>
    <string name="no_novels_error">There are no novels in your library. Go to Explore and find some!</string>
    <string name="update">Update</string>
    <string name="swipe_tip">Tip: Swipe to mark as read/unread</string>
    <string name="continue_btn">Continue</string>
    <string name="bionic_reading">Bionic Reading</string>
    <string name="show_images">Show Images</string>
    <string name="read_history">History</string>
    <string name="download">Download</string>
    <string name="download_all">Download All</string>
    <string name="synopsis">Synopsis</string>
    <string name="downloading_all_chapters_confirmation">This will download all chapters. Do you want to continue?</string>
    <string name="new_chapter_updates">New Chapter Updates</string>
    <string name="enjoy_premium_features_and_faster_updates_with_pro">Enjoy premium features and faster updates with Pro.</string>
    <string name="ranobe_pro">Ranobe Pro</string>
    <string name="get_pro">get pro - play store</string>
    <string name="enable_new_chapter_update_notifications_for_your_library">Enable new chapter update notifications for your library</string>
    <string name="enable">Enable</string>
    <string name="features">FEATURES</string>
    <string name="volume_key_scroll">Volume keys scroll</string>
    <string name="volume_key_scroll_sub_text">Scroll page using volume up and down buttons</string>
    <string name="scroll_speed">Scroll Speed</string>
    <string name="scroll_speed_info">Adjust the animation speed when scrolling with volume buttons</string>
    <string name="speed_very_slow">Very Slow</string>
    <string name="speed_slow">Slow</string>
    <string name="speed_normal">Normal</string>
    <string name="speed_fast">Fast</string>
    <string name="speed_very_fast">Very Fast</string>
    <string name="bionic_reading_info">Highlights the first few letters of words to guide reading speed</string>
    <string name="volume_scroll_info">Scroll pages up and down using hardware volume buttons</string>
    <string name="show_images_info">Display images and illustrations within chapters</string>

    <string name="no_history_error">Nothing here yet. Chapters you read will show up here.</string>
    <string name="history_remove">Remove from history</string>
    <string name="history_open_details">Open novel details</string>
    <string name="history_remove_confirm">Remove read history for %1$s?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="history_clear">Clear history</string>
    <string name="history_clear_confirm">Clear your entire read history? Reading positions will be lost.</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear all</string>
    <string name="history_today">Today</string>
    <string name="history_yesterday">Yesterday</string>
    <string name="history_this_week">This week</string>
    <string name="history_earlier">Earlier</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_reading">Reading</string>
    <string name="settings_about">About</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_sub">Choose how Ranobe looks</string>
    <string name="new_chapter_updates_sub">Get notified when new chapters are available</string>
    <string name="edition_pro">PRO</string>
    <string name="edition_free">FREE</string>
    <string name="settings_tagline">Read light novels from your favourite sources</string>
    <string name="update_available">Version %1$s is available</string>
    <string name="settings_footer">Open source · Made with ♥ by the Ranobe community</string>
    <string name="sources_hint">Turned-off sources are skipped in Search and can\'t be browsed.</string>
    <string name="source_disabled">%1$s is turned off</string>
    <string name="source_inactive">This source is no longer active</string>
    <string name="browse_sources">Browse sources</string>
    <string name="manage">Manage</string>
    <string name="done">Done</string>
    <string name="sources_browse_hint">Tap a source to browse its latest novels.</string>
    <string name="source_off">Turned off</string>
    <string name="back">Back</string>
    <string name="browse_empty">No novels found for this source.</string>
    <string name="browse_load_failed">Couldn\'t load more novels</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="add_to_library">Add to library</string>
    <string name="remove_from_library">Remove from library</string>
    <string name="share">Share</string>
    <string name="added_to_library">Added to library</string>
    <string name="removed_from_library">Removed from library</string>
    <string name="undo">Undo</string>
    <string name="continue_reading">Continue reading</string>
    <string name="start_reading">Start reading</string>
    <string name="chapters_summary">%1$d chapters · %2$d read</string>
    <string name="last_read">Last read</string>
    <string name="search_chapters">Search chapters</string>
    <string name="reader_end">You\'re all caught up. No more chapters for now.</string>
    <string name="chapter_load_failed">Couldn\'t load the chapter</string>
</resources>